--- a/scss/blocks/text-img/_text-img.scss
+++ b/scss/blocks/text-img/_text-img.scss
@@ -11,61 +11,75 @@
     margin: 0 auto 20px;
     width: 1110px;
 
-    .text {
-      float: left;
-      width: 69%;
-      color: #818181;
-      font-family: "Arial";
-      line-height: 30px;
-      padding-right: 50px;
+    &.style-a, &.style-b {
 
-      h2 {
-        font-size: 16px;
-        font-weight: bold;
-        text-transform: uppercase;
+      .text {
+        float: left;
+        color: #818181;
+        font-family: "Arial";
+        line-height: 30px;
+        padding-right: 50px;
+
+        h2 {
+          font-size: 16px;
+          font-weight: bold;
+        }
+
+        p {
+          font-size: 15px;
+          text-align: justify;
+        }
 
       }
 
-      p {
-        font-size: 15px;
-        text-align: justify;
+      .img {
+        float: right;
       }
 
     }
 
-    .img {
-      width: 31%;
-      float: right;
+    &.style-a {
+
+      .text {
+        width: 69%;
+
+        h2 {
+          text-transform: uppercase;
+        }
+      }
+
+      .img {
+        width: 31%;
+      }
+    }
+
+    &.style-b {
+
+      .text {
+        width: 41%;
+
+        h2 {
+          text-transform: none;
+        }
+
+        .btn-wrapper {
+          text-align: left;
+        }
+
+        p {
+          margin-bottom: 30px;
+        }
+      }
+
+      .img {
+        width: 59%;
+
+        img {
+          @include border-radius(25px);
+        }
+      }
     }
 
   }
 }
-
-.b-text-img.style-b {
-
-  .text {
-    width: 41%;
-
-    h2 {
-      text-transform: none;
-    }
-
-    .btn-wrapper {
-      text-align: left;
-    }
-
-    p {
-      margin-bottom: 30px;
-    }
-  }
-
-  .img {
-    width: 59%;
-
-    img {
-      @include border-radius(25px);
-    }
-  }
-}
-
 
