--- a/scss/blocks/text-img/_text-img.scss
+++ b/scss/blocks/text-img/_text-img.scss
@@ -4,7 +4,7 @@
   padding-top: 66px;
   background: image_url("bg/text-img-bg.jpg") 0% 100%;
   margin-bottom: 50px;
-  border-bottom: 2px gray solid;
+  border-bottom: 2px #c2c2c2 solid;
 
   .b-text-img {
     @include clearfix();
