--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1055,7 +1055,7 @@ ul li {
   padding-top: 66px;
   background: url('../images/bg/text-img-bg.jpg') 0% 100%;
   margin-bottom: 50px;
-  border-bottom: 2px gray solid;
+  border-bottom: 2px #c2c2c2 solid;
 }
 .text-img-wrapper .b-text-img {
   margin: 0 auto 20px;
