--- a/scss/blocks/cols/_cols.scss
+++ b/scss/blocks/cols/_cols.scss
@@ -160,20 +160,25 @@
         position: relative;
         overflow: hidden;
 
-        &:before {
-          content: '';
+        a {
           display: block;
-          position: absolute;
-          left: 10px;
-          bottom: 15px;
-          right: 10px;
-          top: -1px;
-          border: 1px solid #999190;
-          @include border-radius(0 0 20px 20px);
-        }
 
-        img {
-          @include border-radius(0 0 25px 25px);
+          &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            left: 10px;
+            bottom: 10px;
+            right: 10px;
+            top: -1px;
+            border: 1px solid #999190;
+            @include border-radius(0 0 20px 20px);
+          }
+
+          img {
+            @include border-radius(0 0 25px 25px);
+            display: block;
+          }
         }
       }
 
