--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -42,6 +42,7 @@
   @import "blocks/think-us/think-us-s";
   @import "blocks/gallery/gallery-s";
   @import "blocks/cols/cols-s";
+  @import "blocks/text-img/text-img-s";
 }
 
 @media (min-width: $width-tablet) and (max-width: $width + 29) {
@@ -52,6 +53,7 @@
 
   //blocks
   @import "blocks/cols/cols-m";
+  @import "blocks/text-img/text-img-m";
 }
 
 @media (min-width: $width + 30) {
