--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -974,12 +974,15 @@ ul li {
   position: relative;
   overflow: hidden;
 }
-.b-cols.style-b .col .col-wrapper:before {
+.b-cols.style-b .col .col-wrapper a {
+  display: block;
+}
+.b-cols.style-b .col .col-wrapper a:before {
   content: '';
   display: block;
   position: absolute;
   left: 10px;
-  bottom: 15px;
+  bottom: 10px;
   right: 10px;
   top: -1px;
   border: 1px solid #999190;
@@ -987,10 +990,11 @@ ul li {
   -webkit-border-radius: 0;
   border-radius: 0 0 20px 20px;
 }
-.b-cols.style-b .col .col-wrapper img {
+.b-cols.style-b .col .col-wrapper a img {
   -moz-border-radius: 0 0 25px 25px;
   -webkit-border-radius: 0;
   border-radius: 0 0 25px 25px;
+  display: block;
 }
 .b-cols.style-b .col .col-item {
   border: none;
@@ -1997,10 +2001,10 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .nav-active .site-header .site-container .nav ul {
     visibility: visible;
     opacity: 1;
-    -moz-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
+    -moz-transform: translate(0, -1px);
+    -ms-transform: translate(0, -1px);
+    -webkit-transform: translate(0, -1px);
+    transform: translate(0, -1px);
   }
 
   .top-menu-active .site-header .site-container .top-menu ul {
@@ -2063,6 +2067,23 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .site-container .b-cols .col .col-item .col-cont img {
     width: 100%;
   }
+
+  .text-img-wrapper .b-text-img {
+    width: 90%;
+  }
+  .text-img-wrapper .b-text-img.style-a .text, .text-img-wrapper .b-text-img.style-b .text {
+    float: none;
+    padding-right: 0px;
+    width: 100%;
+  }
+  .text-img-wrapper .b-text-img.style-a .img, .text-img-wrapper .b-text-img.style-b .img {
+    float: none;
+    width: 100%;
+    text-align: center;
+  }
+  .text-img-wrapper .b-text-img.style-a .img img, .text-img-wrapper .b-text-img.style-b .img img {
+    width: 100%;
+  }
 }
 @media (min-width: 768px) and (max-width: 1249px) {
   .site-container {
@@ -2083,8 +2104,31 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     font: 12px montserrat-regular;
   }
 
-  .b-cols {
+  .b-cols.col-three {
     width: 342px;
+  }
+  .b-cols.col-one {
+    width: 100%;
+  }
+  .b-cols.col-one .col {
+    width: 100%;
+  }
+  .b-cols.col-two .col {
+    width: 100%;
+  }
+
+  .text-img-wrapper .b-text-img {
+    width: 600px;
+  }
+  .text-img-wrapper .b-text-img.style-a .text, .text-img-wrapper .b-text-img.style-b .text {
+    float: none;
+    padding-right: 0px;
+    width: 100%;
+  }
+  .text-img-wrapper .b-text-img.style-a .img, .text-img-wrapper .b-text-img.style-b .img {
+    float: none;
+    width: 100%;
+    text-align: center;
   }
 }
 @media (min-width: 1250px) {
