--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1063,7 +1063,6 @@ ul li {
 }
 .text-img-wrapper .b-text-img {
   margin: 0 auto 20px;
-  width: 1110px;
 }
 .text-img-wrapper .b-text-img:after {
   content: " ";
@@ -2138,5 +2137,9 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
 
   .b-cols {
     width: 1122px;
+  }
+
+  .text-img-wrapper .b-text-img {
+    width: 1110px;
   }
 }
