--- a/scss/layout/header/_header.scss
+++ b/scss/layout/header/_header.scss
@@ -80,7 +80,7 @@
       border-top: 1px solid #131d1d;
       border-bottom: 1px solid #4d4d2f;
 
-      .btn-nav {
+      .btn-menu {
         display: none;
       }
 
