--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -84,7 +84,7 @@
 
     .nav {
 
-      .btn-nav {
+      .btn-menu {
         display: block;
         width: 100%;
         height: 41px;
@@ -120,15 +120,10 @@
   }
 }
 
-.nav-active .site-header .site-container .nav ul {
-  visibility: visible;
-  opacity: 1;
-  @include transform(translate(0, -1px));
+.site-header .site-container{
+  .nav.nav-active ul, .top-menu.nav-active ul {
+    visibility: visible;
+    opacity: 1;
+    @include transform(translate(0, -1px));
+  }
 }
-
-.top-menu-active .site-header .site-container .top-menu ul {
-  visibility: visible;
-  opacity: 1;
-  @include transform(translate(0, 0));
-}
-
