--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -706,7 +706,7 @@ ul li {
   border-top: 1px solid #131d1d;
   border-bottom: 1px solid #4d4d2f;
 }
-.site-header .site-container .nav .btn-nav {
+.site-header .site-container .nav .btn-menu {
   display: none;
 }
 .site-header .site-container .nav ul {
@@ -1964,7 +1964,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     width: 100%;
     height: auto;
   }
-  .site-header .site-container .nav .btn-nav {
+  .site-header .site-container .nav .btn-menu {
     display: block;
     width: 100%;
     height: 41px;
@@ -1997,22 +1997,13 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     font: 12px montserrat-regular;
   }
 
-  .nav-active .site-header .site-container .nav ul {
+  .site-header .site-container .nav.nav-active ul, .site-header .site-container .top-menu.nav-active ul {
     visibility: visible;
     opacity: 1;
     -moz-transform: translate(0, -1px);
     -ms-transform: translate(0, -1px);
     -webkit-transform: translate(0, -1px);
     transform: translate(0, -1px);
-  }
-
-  .top-menu-active .site-header .site-container .top-menu ul {
-    visibility: visible;
-    opacity: 1;
-    -moz-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
   }
 
   .site-container {
