--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -6,7 +6,7 @@
 
     .top-menu {
 
-      .btn-top-menu {
+      >a {
         display: block;
         position: relative;
         float: right;
@@ -84,7 +84,7 @@
 
     .nav {
 
-      .btn-menu {
+      >a {
         display: block;
         width: 100%;
         height: 41px;
