--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -641,7 +641,7 @@ ul li {
   -webkit-box-shadow: 0px 5px 14px 0px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 5px 14px 0px rgba(0, 0, 0, 0.35);
 }
-.site-header .site-container .top-menu .btn-top-menu {
+.site-header .site-container .top-menu > a {
   display: none;
 }
 .site-header .site-container .top-menu ul {
@@ -706,7 +706,7 @@ ul li {
   border-top: 1px solid #131d1d;
   border-bottom: 1px solid #4d4d2f;
 }
-.site-header .site-container .nav .btn-menu {
+.site-header .site-container .nav > a {
   display: none;
 }
 .site-header .site-container .nav ul {
@@ -1897,7 +1897,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     height: 270px;
     text-align: center;
   }
-  .site-header .site-container .top-menu .btn-top-menu {
+  .site-header .site-container .top-menu > a {
     display: block;
     position: relative;
     float: right;
@@ -1906,13 +1906,13 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     border-radius: 4px;
     z-index: 2;
   }
-  .site-header .site-container .top-menu .btn-top-menu:before, .site-header .site-container .top-menu .btn-top-menu:after {
+  .site-header .site-container .top-menu > a:before, .site-header .site-container .top-menu > a:after {
     content: "";
   }
-  .site-header .site-container .top-menu .btn-top-menu:before {
+  .site-header .site-container .top-menu > a:before {
     margin-top: 0;
   }
-  .site-header .site-container .top-menu .btn-top-menu span, .site-header .site-container .top-menu .btn-top-menu:before, .site-header .site-container .top-menu .btn-top-menu:after {
+  .site-header .site-container .top-menu > a span, .site-header .site-container .top-menu > a:before, .site-header .site-container .top-menu > a:after {
     margin-top: 4px;
     display: block;
     width: 22px;
@@ -1964,7 +1964,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     width: 100%;
     height: auto;
   }
-  .site-header .site-container .nav .btn-menu {
+  .site-header .site-container .nav > a {
     display: block;
     width: 100%;
     height: 41px;
