--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -5,6 +5,7 @@
 		left: 50%;
 		border-bottom: 5px solid #3e636b;
 		border-top: 1px solid #000;
+    margin-bottom: 50px;
 	}
 
 	.content-bottom {
