--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1211,7 +1211,7 @@ ul li {
 .text-img-wrapper .b-text-img.style-c .text {
   width: 50%;
   border-right: 2px #c2c2c2 solid;
-  padding: 0;
+  padding: 0 30px 0 0;
 }
 .text-img-wrapper .b-text-img.style-c .text ul {
   font-size: 15px;
@@ -1238,7 +1238,6 @@ ul li {
 }
 .text-img-wrapper .b-text-img.style-c .img ul {
   font-size: 15px;
-  margin-bottom: 50px;
   padding: 0;
 }
 .text-img-wrapper .b-text-img.style-c .img ul .last {
