Weddings v2 knopoki eche ne final

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,6 +25,8 @@
 @import "blocks/think-us/think-us";
 @import "blocks/gallery/gallery";
 @import "blocks/text-img/text-img";
+@import "blocks/tabs/tabs";
+@import "blocks/cols-inner/_cols-inner";
 
 //pages
 
