--- a/scss/blocks/tabs/_tabs.scss
+++ b/scss/blocks/tabs/_tabs.scss
@@ -99,6 +99,17 @@
         border-top: 4px solid #bdc01f;
       }
 
+      &.platinum {
+        border-top: 4px solid #d5d1d1;
+      }
+
+      &.diamond {
+        border-top: 4px solid #d4d4d4;
+      }
+
+      &.grand-dinner {
+        border-top: 4px solid #be6a6a;
+      }
     }
   }
 }
