--- a/scss/blocks/text-img/_text-img.scss
+++ b/scss/blocks/text-img/_text-img.scss
@@ -42,6 +42,11 @@
 
       .img {
         float: right;
+
+        p {
+          font-size: 15px;
+          text-align: justify;
+        }
       }
     }
 
