--- a/scss/blocks/cols/_cols.scss
+++ b/scss/blocks/cols/_cols.scss
@@ -6,6 +6,12 @@
 
     .col {
       width: 1122px;
+
+      h3 {
+        span {
+          min-width: 250px;
+        }
+      }
     }
   }
 
@@ -29,6 +35,12 @@
       float: left;
       margin-right: 46px;
       width: 342px;
+
+      h3 {
+        span {
+          min-width: 186px;
+        }
+      }
 
       &.col-3 {
         margin: 0;
@@ -92,7 +104,6 @@
         border-bottom: 1px solid #000;
 
         span {
-          min-width: 186px;
           background: #5f1717;
         }
       }
