--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -24,6 +24,16 @@
     letter-spacing: 6px;
     line-height: 80px;
   }
+
+  .link-view {
+    display: block;
+    font-size: 12px;
+    font-family: "Montserrat-regular";
+    letter-spacing: 2px;
+    color: #339999;
+    text-transform: uppercase;
+    line-height: 30px;
+  }
 }
 
 
