--- a/scss/blocks/think-us/_think-us.scss
+++ b/scss/blocks/think-us/_think-us.scss
@@ -9,6 +9,7 @@
   @include border-radius(20px 20px 0 0);
   padding: 13px 13px 0;
   overflow: hidden;
+  border-bottom: 5px solid #3e636b;
 
   .outer-th {
     height: 100%;
