--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,6 +11,7 @@
 //forms
 @import "forms/forms";
 @import "forms/newsletter";
+@import "forms/contact";
 
 //layout
 @import "layout/header/header";
