--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -520,6 +520,17 @@ ul li {
   border-radius: 5px;
   border: 1px solid #c4c4c4;
 }
+.form .form-type-radio:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+.form .form-type-radio .radio {
+  float: left;
+}
 
 .form-newsletter .field-birthday-month, .form-newsletter .field-birthday-day, .form-newsletter .field-city, .form-newsletter .field-state {
   margin-right: 2%;
@@ -617,6 +628,158 @@ ul li {
   width: 50%;
 }
 .form-newsletter .field-captcha .form-item label {
+  font: 11px/17px montserrat-regular;
+  color: #929292;
+}
+
+.form-contact {
+  width: 67%;
+  margin: 0 auto;
+}
+.form-contact .form-item:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+.form-contact .form-item label {
+  font-size: 13px;
+  color: #336666;
+  text-transform: none;
+}
+.form-contact .field-first-name, .form-contact .field-last-name, .form-contact .field-your-email-address, .form-contact .field-your-phone-number, .form-contact .field-type-of-event,
+.form-contact .field-preferred-month, .form-contact .field-preferred-day, .form-contact .field-preferred-year, .form-contact .field-date-flexible {
+  float: left;
+}
+.form-contact .field-first-name, .form-contact .field-your-email-address {
+  margin-right: 4%;
+}
+.form-contact .field-first-name, .form-contact .field-last-name, .form-contact .field-your-email-address {
+  width: 48%;
+}
+.form-contact .field-your-phone-number {
+  width: 18, 5%;
+}
+.form-contact .field-type-of-event {
+  width: 33%;
+  margin-right: 6.5%;
+}
+.form-contact .field-preferred-month, .form-contact .field-date-flexible {
+  width: 14.2%;
+}
+.form-contact .field-preferred-day, .form-contact .field-preferred-year {
+  width: 9.9%;
+}
+.form-contact .field-preferred-day label, .form-contact .field-preferred-year label {
+  visibility: hidden;
+}
+.form-contact .field-preferred-month, .form-contact .field-preferred-day, .form-contact .field-preferred-year {
+  margin-right: 2%;
+}
+.form-contact .form-type-radio .radio {
+  margin-right: 15%;
+}
+.form-contact .form-type-radio > label {
+  margin-bottom: 15%;
+}
+.form-contact .field-birthday-month, .form-contact .field-birthday-day, .form-contact .field-city, .form-contact .field-state {
+  margin-right: 2%;
+}
+.form-contact .field-birthday-month, .form-contact .field-birthday-day, .form-contact .field-birthday-year, .form-contact .field-city, .form-contact .field-state, .form-contact .field-zip {
+  float: left;
+}
+.form-contact .field-birthday-day label, .form-contact .field-birthday-year label {
+  visibility: hidden;
+}
+.form-contact .field-birthday-month {
+  width: 45%;
+}
+.form-contact .field-birthday-day {
+  width: 20%;
+}
+.form-contact .field-birthday-year {
+  width: 30%;
+}
+.form-contact .field-address {
+  clear: left;
+}
+.form-contact .field-city {
+  width: 50%;
+}
+.form-contact .field-state {
+  width: 20%;
+}
+.form-contact .field-zip {
+  width: 25%;
+}
+.form-contact .select {
+  font: 15px/17px montserrat-bold;
+  height: 34px;
+  width: 100%;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #c4c4c4;
+  overflow: hidden;
+  background: url('../images/bg/arrows.png') no-repeat #fff 90% 50%;
+}
+.form-contact .select .form-select {
+  width: 100%;
+  height: 34px;
+}
+.form-contact .select .form-select a {
+  height: 32px;
+  line-height: 32px;
+  border: none;
+  color: #999999;
+  background: #fff;
+}
+.form-contact .select .form-select a .select2-arrow {
+  border: none;
+  right: 3px;
+}
+.form-contact .select .form-select a .select2-arrow b {
+  background: url('../images/bg/arrows.png') no-repeat #fff 90% 50% !important;
+}
+.form-contact .field-captcha {
+  clear: left;
+  margin-bottom: 30px;
+}
+.form-contact .field-captcha .captcha-img-container {
+  margin-bottom: 12px;
+}
+.form-contact .field-captcha .captcha-img-container:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+.form-contact .field-captcha .captcha-img-container a, .form-contact .field-captcha .captcha-img-container img {
+  float: left;
+  width: 50%;
+  font: 11px/17px montserrat-regular;
+  text-transform: uppercase;
+  line-height: 50px;
+  text-decoration: none;
+  color: #193739;
+}
+.form-contact .field-captcha .form-item:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+.form-contact .field-captcha .form-item label, .form-contact .field-captcha .form-item .form-text {
+  float: left;
+  width: 50%;
+}
+.form-contact .field-captcha .form-item label {
   font: 11px/17px montserrat-regular;
   color: #929292;
 }
@@ -1013,6 +1176,7 @@ ul li {
 }
 .b-cols.style-a .col-c .col-wrapper > div:first-child {
   border-bottom: 1px solid #000;
+  margin-bottom: 30px;
 }
 .b-cols.style-a .col-c .col-wrapper > div:first-child p {
   font-size: 15px;
@@ -1021,6 +1185,7 @@ ul li {
   margin: 0 auto 20px;
   width: 90%;
   color: #336666;
+  font-style: italic;
 }
 .b-cols.style-b .col .col-wrapper {
   position: relative;
