--- a/scss/forms/_forms.scss
+++ b/scss/forms/_forms.scss
@@ -20,5 +20,13 @@
 			border: 1px solid #c4c4c4;
 		}
 	}
+
+  .form-type-radio {
+    @include clearfix();
+
+    .radio {
+      float: left;
+    }
+  }
 }
 
